Fix Company details overlap on profile

--- a/enrolment/static/sass/company-profile-details.scss
+++ b/enrolment/static/sass/company-profile-details.scss
@@ -20,6 +20,9 @@
     margin-top: 0;
     margin-bottom: 10px;
   }
+  .company-contact-details {
+    margin-left: 0;
+  }
   .company-profile-module-container {
     border: 1px solid #DFD5C5;
     margin-bottom: 20px;
@@ -81,8 +84,8 @@
   .company-profile-module-social-links,
   .company-profile-module-facts {
     border-left: 1px solid #dedede;
-    left: -1px;
-    margin-left: 20px;
+    left: 20px;
+    margin-left: -1px;
     padding-left: 21px;
     position: relative;
     @media (max-width: 767px) {
